Improved code and tests
Bumped Exec extension to 1.0.1
Bumped PMD extension to 1.1.0